[gd_scene load_steps=21 format=3 uid="uid://bmbtjwkw105hn"]

[ext_resource type="Script" path="res://Scripts/slime.gd" id="1_30o3e"]
[ext_resource type="Texture2D" uid="uid://bv6o0juhe6ssn" path="res://assets/sprites/slime_green.png" id="1_m7yh0"]
[ext_resource type="PackedScene" uid="uid://b4yjhl808u2tm" path="res://scenes/health_component.tscn" id="3_kfayf"]
[ext_resource type="PackedScene" uid="uid://bg4nwu0flv8w8" path="res://scenes/attack_component.tscn" id="4_ql3tr"]
[ext_resource type="PackedScene" uid="uid://bfdqvfbh8d07c" path="res://scenes/hit_area_component.tscn" id="4_v8t4y"]

[sub_resource type="AtlasTexture" id="AtlasTexture_27f3e"]
atlas = ExtResource("1_m7yh0")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_hj6ug"]
atlas = ExtResource("1_m7yh0")
region = Rect2(48, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_dap12"]
atlas = ExtResource("1_m7yh0")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_o8yhu"]
atlas = ExtResource("1_m7yh0")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_0rd8n"]
atlas = ExtResource("1_m7yh0")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_5shgf"]
atlas = ExtResource("1_m7yh0")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_uutnt"]
atlas = ExtResource("1_m7yh0")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_kxg50"]
atlas = ExtResource("1_m7yh0")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_gfn88"]
atlas = ExtResource("1_m7yh0")
region = Rect2(72, 24, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_1ckka"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_27f3e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hj6ug")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dap12")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o8yhu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0rd8n")
}],
"loop": false,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5shgf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uutnt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kxg50")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gfn88")
}],
"loop": true,
"name": &"idel",
"speed": 6.0
}]

[sub_resource type="Animation" id="Animation_r02np"]
resource_name = "on_dead"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"dead"]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("StaticBody2D/attack_component")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="Animation_pakjh"]
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idel"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rueom"]
_data = {
"RESET": SubResource("Animation_pakjh"),
"on_dead": SubResource("Animation_r02np")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_mfyox"]
radius = 5.0
height = 14.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_33ss5"]
size = Vector2(12, 10)

[node name="slime" type="Node2D"]
script = ExtResource("1_30o3e")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_1ckka")
animation = &"idel"
autoplay = "idel"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_rueom")
}

[node name="rdownRC" type="RayCast2D" parent="."]
position = Vector2(10, -5)
target_position = Vector2(0, 8)

[node name="rstrightRC" type="RayCast2D" parent="."]
position = Vector2(8, -7)
target_position = Vector2(7, 0)

[node name="ldownRC2" type="RayCast2D" parent="."]
position = Vector2(-9, -5)
target_position = Vector2(0, 8)

[node name="lstrightRC2" type="RayCast2D" parent="."]
position = Vector2(-8, -7)
target_position = Vector2(-7, 0)

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, -7)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_mfyox")

[node name="health_component" parent="StaticBody2D" instance=ExtResource("3_kfayf")]
max_health = 30

[node name="hit_area_component" parent="StaticBody2D" node_paths=PackedStringArray("health_component", "attack_component", "masterNode") instance=ExtResource("4_v8t4y")]
position = Vector2(0, -6)
collision_layer = 1
collision_mask = 2
health_component = NodePath("../health_component")
attack_component = NodePath("../attack_component")
masterNode = NodePath("../..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D/hit_area_component"]
shape = SubResource("RectangleShape2D_33ss5")

[node name="attack_component" parent="StaticBody2D" instance=ExtResource("4_ql3tr")]
position = Vector2(0, -6)
damage = 10
